Dual Runner section added

--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
                             <iframe width="420" height="315"
                                     src="https://www.youtube.com/embed/KPXSuODL4LI?autoplay=1">
                             </iframe>
-                            Snip and Shear was the submission my group and I made for Global Game Jam 2023. The team on this project was the same as Caff3.ine. <br /><br />
+                            Snip and Shear was the submission my group and I made for Global Game Jam 2023, where the theme was "Roots". The team on this project was the same as Caff3.ine. <br /><br />
                             For this project, I wanted to take a break from programming and develop my skills in other areas, namely 3D modelling and animation, as I had just taught
                             myself Blender and was eager to expand my portfolio. I also lead the level design for this game, designing and modelling the game map entirely by myself.
                             When designing the level, I kept level design principles in mind and took inspiration from shooter games such as Halo and Team Fortress 2 when building the
                             level, which resulted in a level with a large focus on chokepoints and high-risk, high-reward collectables.<br /><br />
-                            The game can be played in browser <a href="https://jamiedarbon.itch.io/snip-and-shear" target="_blank">here.</a>
+                            The game can be played in browser <a href="https://jamiedarbon.itch.io/snip-and-shear" target="_blank">here.</a><br /><br />
                         </p>
                     </div>
                 </div>
@@ -220,6 +220,40 @@
                     </div>
                 </div>
                 <br>
+            </div>
+            <div class="container-fluid" id="graffiti">
+                <h2>Dual Runner (2022)</h2>
+                <h3>Group Project - Level Design, Game Design, Animation</h3>
+                <div class="row">
+                    <div id="graffitiVideo">
+                        <p id="graffitiContents">
+                            <iframe width="420" height="315"
+                                    src="https://www.youtube.com/embed/7xlWqLgTodY?autoplay=1">
+                            </iframe>
+                            Dual Runner was a group submission for Global Game Jam 2022, where the theme was "Duality". <br /><br />
+                            Dual Runner's levels were designed to somewhat emulate that of  the classic Sonic the Hedgehog games. In its level design, 
+                            you can see design which splits the level into multiple paths, with the top path being harder to 
+                            stay on, but significantly faster, rewarding the player with the sensation of going fast. Additionally, when designing the game's mechanics, I 
+                            decided to use the level design to attempt to teach the mechanics to the player without a word of dialogue, introducing the player to a mechanic in 
+                            a safe environment first, then removing the safety net and building on the mechanic to create interesting and challenging level design.<br /><br />
+                            You can download the game <a href="https://globalgamejam.org/2022/games/dualrunner-0">here.</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid" id="caffeine">
+                <h2>Property Tycoon (2022)</h2>
+                <h3>Group Project - Programming, UI, Design</h3>
+                <div class="row">
+                    <div id="graffitiVideo">
+                        <p id="caffeineContents">
+                            <iframe width="420" height="315"
+                                    src="https://www.youtube.com/embed/qSTyX428grU?autoplay=1">
+                            </iframe>
+                            Property Tycoon was a second year group project in which
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
