Property Tycoon and Ground Control sections

--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
                                     src="https://www.youtube.com/embed/7xlWqLgTodY?autoplay=1">
                             </iframe>
                             Dual Runner was a group submission for Global Game Jam 2022, where the theme was "Duality". <br /><br />
-                            Dual Runner's levels were designed to somewhat emulate that of  the classic Sonic the Hedgehog games. In its level design, 
-                            you can see design which splits the level into multiple paths, with the top path being harder to 
-                            stay on, but significantly faster, rewarding the player with the sensation of going fast. Additionally, when designing the game's mechanics, I 
-                            decided to use the level design to attempt to teach the mechanics to the player without a word of dialogue, introducing the player to a mechanic in 
+                            Dual Runner's levels were designed to somewhat emulate that of  the classic Sonic the Hedgehog games. In its level design,
+                            you can see design which splits the level into multiple paths, with the top path being harder to
+                            stay on, but significantly faster, rewarding the player with the sensation of going fast. Additionally, when designing the game's mechanics, I
+                            decided to use the level design to attempt to teach the mechanics to the player without a word of dialogue, introducing the player to a mechanic in
                             a safe environment first, then removing the safety net and building on the mechanic to create interesting and challenging level design.<br /><br />
-                            You can download the game <a href="https://globalgamejam.org/2022/games/dualrunner-0">here.</a>
+                            You can download the game <a href="https://globalgamejam.org/2022/games/dualrunner-0">here.</a><br /><br />
                         </p>
                     </div>
                 </div>
@@ -250,7 +250,31 @@
                             <iframe width="420" height="315"
                                     src="https://www.youtube.com/embed/qSTyX428grU?autoplay=1">
                             </iframe>
-                            Property Tycoon was a second year group project in which
+                            Property Tycoon was a second year group project in which we were tasked as a group to create a digital version of the popular game Monopoly.<br /><br />
+                            Recreating Monopoly meant working with an array-based solution in which each space on the game board was its own array object and derived from a parent class
+                            which contained information such as the name, property value, position on the board and any purchased properties. This project required us to get this data and
+                            load it in from an external file, which would allow for the board to be customised by the user with custom property names and prices, which is why you can see
+                            the board loading up placeholder names before the game starts.<br /><br />
+                            Other areas which had to be created included creating a dynamic UI which changes the position of the user's card on the screen depending on the number of players,
+                            AI controlled players and the ability to load and save the game through the use of JSON files.<br /><br />
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid" id="graffiti">
+                <h2>Ground Control (2020)</h2>
+                <h3>Solo Project - Level Design, Game Design, Programming</h3>
+                <div class="row">
+                    <div id="graffitiVideo">
+                        <p id="graffitiContents">
+                            <iframe width="420" height="315"
+                                    src="https://www.youtube.com/embed/xNAxNR1pt0s?autoplay=1">
+                            </iframe>
+                            Ground Control was my submission for the GTMK 2020 game jam, where the theme was "Out of Control".<br /><br />
+                            This game was my first fully realised project and my first proper endeavour into Unity and game development. In the game, the player must control 
+                            a satellite which needs to be positioned over a planet in order to receive data. However, the satellite is malfunctioning and will have a random effect 
+                            applied to it as it attempts to line itself up. These range from disabled thrusters to corrupted VRAM.<br /><br />
+                            You can download the game <a href="https://jamiedarbon.itch.io/ground-control">here.</a><br /><br />
                         </p>
                     </div>
                 </div>
