3D and VFX section added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         computers and video games, which have fueled my professional development and informed
                         my career choices. Along with developing artistic skills, I spent a lot of time growing up
                         developing technical skills relating to game development and am proficient in various
-                        coding languages such as C#, HLSL, Java and Javascript.
+                        coding languages such as C#, HLSL, Java and Javascript, as well as some limited experience with C, C++ and Unreal Engine.
                         <br />
                         <br />
                         In my spare time, I like to work on a range of creative projects such as video editing, art, and
@@ -271,10 +271,28 @@
                                     src="https://www.youtube.com/embed/xNAxNR1pt0s?autoplay=1">
                             </iframe>
                             Ground Control was my submission for the GTMK 2020 game jam, where the theme was "Out of Control".<br /><br />
-                            This game was my first fully realised project and my first proper endeavour into Unity and game development. In the game, the player must control 
-                            a satellite which needs to be positioned over a planet in order to receive data. However, the satellite is malfunctioning and will have a random effect 
+                            This game was my first fully realised project and my first proper endeavour into Unity and game development. In the game, the player must control
+                            a satellite which needs to be positioned over a planet in order to receive data. However, the satellite is malfunctioning and will have a random effect
                             applied to it as it attempts to line itself up. These range from disabled thrusters to corrupted VRAM.<br /><br />
                             You can download the game <a href="https://jamiedarbon.itch.io/ground-control">here.</a><br /><br />
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid" id="caffeine">
+                <h2>3D Art and VFX</h2>
+                <div class="row">
+                    <div id="graffitiVideo">
+                        <p id="caffeineContents">
+                            <iframe width="420" height="315"
+                                    src="https://www.youtube.com/embed/M8a1RoeR0Rw?autoplay=1">
+                            </iframe>
+                            I have also had experience with 3D modelling and visual effects, being proficient in a range of software, including Blender, Cinema 4D, 3DS Max, Photoshop, 
+                            After Effects and Premiere Pro. <br /><br />
+                            In this section, you will find my demo reel of various projects I have made in my time as a student, including both university submissions and personal projects. 
+                            I am self taught in Blender and Photoshop, and have been using my skills in these softwares to help generate a side income whilst studying at university.<br /><br />
+                            This show reel showcases my abilities in areas such as Animation, 3D Modelling (including Weight Painting, Rigging and Texturing), VFX Compositing, Video Editing and 
+                            Colour Grading.<br /><br />
                         </p>
                     </div>
                 </div>
