Art Portfolio added

--- a/index.html
+++ b/index.html
@@ -287,15 +287,115 @@
                             <iframe width="420" height="315"
                                     src="https://www.youtube.com/embed/M8a1RoeR0Rw?autoplay=1">
                             </iframe>
-                            I have also had experience with 3D modelling and visual effects, being proficient in a range of software, including Blender, Cinema 4D, 3DS Max, Photoshop, 
+                            I have also had experience with 3D modelling and visual effects, being proficient in a range of software, including Blender, Cinema 4D, 3DS Max, Photoshop,
                             After Effects and Premiere Pro. <br /><br />
-                            In this section, you will find my demo reel of various projects I have made in my time as a student, including both university submissions and personal projects. 
+                            In this section, you will find my demo reel of various projects I have made in my time as a student, including both university submissions and personal projects.
                             I am self taught in Blender and Photoshop, and have been using my skills in these softwares to help generate a side income whilst studying at university.<br /><br />
-                            This show reel showcases my abilities in areas such as Animation, 3D Modelling (including Weight Painting, Rigging and Texturing), VFX Compositing, Video Editing and 
+                            This show reel demonstrates my abilities in areas such as Animation, 3D Modelling (including Weight Painting, Rigging and Texturing), VFX Compositing, Video Editing and
                             Colour Grading.<br /><br />
                         </p>
                     </div>
                 </div>
+            </div>
+            <div class="container-fluid" id="graffiti">
+                <h2>Graphic Design and Art</h2>
+                <div class="row">
+                    <div id="graffitiVideo">
+                        <p id="graffitiContents">
+                            Being one of my strongest subjects since GCSE, art is a hobby which I have pursued since, having drawn since 2015 and taking commissions for custom art and
+                            graphic design since around 2018. In this section, I showcase a selection of digital and traditional art, as well as graphic design work I have done for
+                            various events run within the local community. <br /><br />
+                        </p>
+                    </div>
+                </div>
+                <h2>Art</h2>
+                <div class="slideshow-container">
+                    <div class="mySlides fade">
+                        <img src="IMG_5079.jpg" style="width:100%;">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="IMG_5254.jpg" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="IMG_5423.jpg" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="IMG_5729.jpg" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="comic page pog text.png" style="width:100%;">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="crouch end 4.jpg" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="mae.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="BadgeSpreadRobbie.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="meowth irl cam.png" style="width:100%;">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="terrible fate.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="trashjunkies.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="20xx2.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="Frisky Furrets.png" style="width:100%">
+                    </div>
+                    <div style="text-align: center">
+                        <a class="prev" onclick="plusSlides(-1)">❮</a>
+                        <a class="next" onclick="plusSlides(1)">❯</a>
+                    </div>
+                </div>
+                <h2>Graphic Design</h2>
+                <div id="graffitiVideo">
+                    <p id="graffitiContents">
+                        A large amount of my graphic design work comes from working with people in the UK competitive Super Smash Bros. Scene,
+                        hosting running a local tournament in Brighton myself every other Sunday.<br /><br />
+                        Between 2021 and 2022, I also co-owned and ran an eSports organisation titled "Horde Global" (<a href="https://twitter.com/HordeGlobal" target="_blank">https://twitter.com/HordeGlobal</a>), in which I produced graphic design, hosted
+                        events, ran streams and ran the social media accounts. You can see work for this eSports org in the slideshow below.
+                    </p>
+                </div>
+                <div class="slideshow-container">
+                    <div class="mySlides fade">
+                        <img src="Horde Blab.png" style="width:100%;">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="Horde Tea Party.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="horde x regen 2022.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="BsUlt140523.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="128 cap.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="resurgence comms.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="Resurgence Overlay.png" style="width:100%">
+                    </div>
+                    <div style="text-align: center">
+                        <a class="prev" onclick="plusSlides(-1)">❮</a>
+                        <a class="next" onclick="plusSlides(1)">❯</a>
+                    </div>
+                </div>
+                <div id="graffitiVideo">
+                    <p id="graffitiContents">
+                        You can find more examples of my art and graphic design work on my ArtStation Profile: <a href="https://www.artstation.com/sleepyboi">https://www.artstation.com/sleepyboi</a>
+                    </p>
+                </div>
+                <br>
             </div>
         </div>
     </div>
