--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div id="graffitiVideo">
                         <p id="graffitiContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/l1y9Llu-Pss?autoplay=1">
+                                    src="https://www.youtube.com/embed/l1y9Llu-Pss">
                             </iframe>
                             Graffiti Street is the project I worked on for my final dissertation at the University of Sussex. In this project, I aimed to create a game which utilises
                             modern technologies to provide the player with an environment in which they could interact with the game world by drawing onto it. It is for this reason that
@@ -153,7 +153,7 @@
                     <div id="graffitiVideo">
                         <p id="caffeineContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/pchPhwYF5Iw?autoplay=1">
+                                    src="https://www.youtube.com/embed/pchPhwYF5Iw">
                             </iframe>
                             Caff3.ine was a group project I worked on in my second year at the University of Sussex. We were tasked with an 8 month development cycle, in which time, we were
                             expected to produce a full, working game from conceptualisation to implementation. This project also required us to make a design document for the game.<br /><br />
@@ -171,7 +171,7 @@
                     <div id="graffitiVideo">
                         <p id="graffitiContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/KPXSuODL4LI?autoplay=1">
+                                    src="https://www.youtube.com/embed/KPXSuODL4LI">
                             </iframe>
                             Snip and Shear was the submission my group and I made for Global Game Jam 2023, where the theme was "Roots". The team on this project was the same as Caff3.ine. <br /><br />
                             For this project, I wanted to take a break from programming and develop my skills in other areas, namely 3D modelling and animation, as I had just taught
@@ -190,7 +190,7 @@
                     <div id="graffitiVideo">
                         <p id="caffeineContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/V9O4V4eZxuQ?autoplay=1">
+                                    src="https://www.youtube.com/embed/V9O4V4eZxuQ">
                             </iframe>
                             This project was made as a solo endeavour in the summer of 2022 between the end of my second year and the start of my final year at university. <br /><br />
                             At university, I had only been taught how to work with 3D and while I had prior experience with Unity 2D, I did not have experience working with spritesheets
@@ -228,7 +228,7 @@
                     <div id="graffitiVideo">
                         <p id="graffitiContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/7xlWqLgTodY?autoplay=1">
+                                    src="https://www.youtube.com/embed/7xlWqLgTodY">
                             </iframe>
                             Dual Runner was a group submission for Global Game Jam 2022, where the theme was "Duality". <br /><br />
                             Dual Runner's levels were designed to somewhat emulate that of  the classic Sonic the Hedgehog games. In its level design,
@@ -248,7 +248,7 @@
                     <div id="graffitiVideo">
                         <p id="caffeineContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/qSTyX428grU?autoplay=1">
+                                    src="https://www.youtube.com/embed/qSTyX428grU">
                             </iframe>
                             Property Tycoon was a second year group project in which we were tasked as a group to create a digital version of the popular game Monopoly.<br /><br />
                             Recreating Monopoly meant working with an array-based solution in which each space on the game board was its own array object and derived from a parent class
@@ -268,7 +268,7 @@
                     <div id="graffitiVideo">
                         <p id="graffitiContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/xNAxNR1pt0s?autoplay=1">
+                                    src="https://www.youtube.com/embed/xNAxNR1pt0s">
                             </iframe>
                             Ground Control was my submission for the GTMK 2020 game jam, where the theme was "Out of Control".<br /><br />
                             This game was my first fully realised project and my first proper endeavour into Unity and game development. In the game, the player must control
@@ -285,7 +285,7 @@
                     <div id="graffitiVideo">
                         <p id="caffeineContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/M8a1RoeR0Rw?autoplay=1">
+                                    src="https://www.youtube.com/embed/M8a1RoeR0Rw">
                             </iframe>
                             I have also had experience with 3D modelling and visual effects, being proficient in a range of software, including Blender, Cinema 4D, 3DS Max, Photoshop,
                             After Effects and Premiere Pro. <br /><br />
@@ -309,49 +309,49 @@
                     </div>
                 </div>
                 <h2>Art</h2>
-                <div class="slideshow-container">
-                    <div class="mySlides fade">
+                <div class="slideshow-container2">
+                    <div class="mySlides2">
                         <img src="IMG_5079.jpg" style="width:100%;">
                     </div>
-                    <div class="mySlides fade">
-                        <img src="IMG_5254.jpg" style="width:100%">
+                    <div class="mySlides2">
+                        <img src="IMG_5254.png" style="width:100%">
                     </div>
-                    <div class="mySlides fade">
-                        <img src="IMG_5423.jpg" style="width:100%">
+                    <div class="mySlides2">
+                        <img src="IMG_5423.png" style="width:100%">
                     </div>
-                    <div class="mySlides fade">
+                    <div class="mySlides2">
                         <img src="IMG_5729.jpg" style="width:100%">
                     </div>
-                    <div class="mySlides fade">
+                    <div class="mySlides2">
                         <img src="comic page pog text.png" style="width:100%;">
                     </div>
-                    <div class="mySlides fade">
-                        <img src="crouch end 4.jpg" style="width:100%">
+                    <div class="mySlides2">
+                        <img src="crouch end 4.png" style="width:100%">
                     </div>
-                    <div class="mySlides fade">
+                    <div class="mySlides2">
                         <img src="mae.png" style="width:100%">
                     </div>
-                    <div class="mySlides fade">
+                    <div class="mySlides2">
                         <img src="BadgeSpreadRobbie.png" style="width:100%">
                     </div>
-                    <div class="mySlides fade">
+                    <div class="mySlides2">
                         <img src="meowth irl cam.png" style="width:100%;">
                     </div>
-                    <div class="mySlides fade">
+                    <div class="mySlides2">
                         <img src="terrible fate.png" style="width:100%">
                     </div>
-                    <div class="mySlides fade">
-                        <img src="trashjunkies.png" style="width:100%">
+                    <div class="mySlides2">
+                        <img src="trashjunkies .png" style="width:100%">
                     </div>
-                    <div class="mySlides fade">
+                    <div class="mySlides2">
                         <img src="20xx2.png" style="width:100%">
                     </div>
-                    <div class="mySlides fade">
+                    <div class="mySlides2">
                         <img src="Frisky Furrets.png" style="width:100%">
                     </div>
                     <div style="text-align: center">
-                        <a class="prev" onclick="plusSlides(-1)">❮</a>
-                        <a class="next" onclick="plusSlides(1)">❯</a>
+                        <a class="prev" onclick="plusSlides2(-1)">❮</a>
+                        <a class="next" onclick="plusSlides2(1)">❯</a>
                     </div>
                 </div>
                 <h2>Graphic Design</h2>
@@ -363,31 +363,31 @@
                         events, ran streams and ran the social media accounts. You can see work for this eSports org in the slideshow below.
                     </p>
                 </div>
-                <div class="slideshow-container">
-                    <div class="mySlides fade">
-                        <img src="Horde Blab.png" style="width:100%;">
+                <div class="slideshow-container3">
+                    <div class="mySlides3">
+                        <img src="Horde Blab.png" style="width: 100% ">
                     </div>
-                    <div class="mySlides fade">
-                        <img src="Horde Tea Party.png" style="width:100%">
+                    <div class="mySlides3">
+                        <img src="Horde Tea Party.png" style="width: 100%">
                     </div>
-                    <div class="mySlides fade">
-                        <img src="horde x regen 2022.png" style="width:100%">
+                    <div class="mySlides3">
+                        <img src="horde x regen 2022.png" style="width: 100%">
                     </div>
-                    <div class="mySlides fade">
-                        <img src="BsUlt140523.png" style="width:100%">
+                    <div class="mySlides3">
+                        <img src="BsUlt 140523.png" style="width: 100%">
                     </div>
-                    <div class="mySlides fade">
-                        <img src="128 cap.png" style="width:100%">
+                    <div class="mySlides3">
+                        <img src="128 cap.png" style="width: 100%">
                     </div>
-                    <div class="mySlides fade">
-                        <img src="resurgence comms.png" style="width:100%">
+                    <div class="mySlides3">
+                        <img src="resurgence comms.png" style="width: 100%">
                     </div>
-                    <div class="mySlides fade">
-                        <img src="Resurgence Overlay.png" style="width:100%">
+                    <div class="mySlides3">
+                        <img src="Resurgence Overlay.png" style="width: 100%">
                     </div>
                     <div style="text-align: center">
-                        <a class="prev" onclick="plusSlides(-1)">❮</a>
-                        <a class="next" onclick="plusSlides(1)">❯</a>
+                        <a class="prev" onclick="plusSlides3(-1)">❮</a>
+                        <a class="next" onclick="plusSlides3(1)">❯</a>
                     </div>
                 </div>
                 <div id="graffitiVideo">
@@ -425,6 +425,62 @@
             }
             slides[slideIndex - 1].style.display = "block";
             dots[slideIndex - 1].className += " active";
+        }
+    </script>
+    <script>
+        let slideIndex2 = 1;
+        showSlides2(slideIndex2);
+
+        function plusSlides2(n) {
+            showSlides2(slideIndex2 += n);
+        }
+
+        function currentSlide2(n) {
+            showSlides2(slideIndex2 = n);
+        }
+
+        function showSlides2(n) {
+            let i;
+            let slides = document.getElementsByClassName("mySlides2");
+            let dots = document.getElementsByClassName("dot");
+            if (n > slides.length) { slideIndex2 = 1 }
+            if (n < 1) { slideIndex2 = slides.length }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex2 - 1].style.display = "block";
+            dots[slideIndex2 - 1].className += " active";
+        }
+    </script>
+    <script>
+        let slideIndex3 = 1;
+        showSlides3(slideIndex3);
+
+        function plusSlides3(n) {
+            showSlides3(slideIndex3 += n);
+        }
+
+        function currentSlide3(n) {
+            showSlides3(slideIndex3 = n);
+        }
+
+        function showSlides3(n) {
+            let i;
+            let slides = document.getElementsByClassName("mySlides3");
+            let dots = document.getElementsByClassName("dot");
+            if (n > slides.length) { slideIndex3 = 1 }
+            if (n < 1) { slideIndex3 = slides.length }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex3 - 1].style.display = "block";
+            dots[slideIndex3 - 1].className += " active";
         }
     </script>
 </body>
